text.txt
lin@lin-VirtualBox:~/Downloads/ns-allinone-3.35/ns-3.35$ ./waf --run="leo-lab6 --Task=2 --in="paths1.in" --out="task2.out""
Waf: Entering directory `/home/lin/Downloads/ns-allinone-3.35/ns-3.35/build'
[1974/2979] Compiling src/nix-vector-routing/model/nix-vector-routing.cc
[2705/2979] Compiling contrib/leo/examples/leo-lab6.cc
../src/nix-vector-routing/model/nix-vector-routing.cc: In member function ‘ns3::Ptr<ns3::NixVector> ns3::NixVectorRouting<T>::GetNixVector(ns3::Ptr<ns3::Node>, ns3::NixVectorRouting<T>::IpAddress, ns3::Ptr<ns3::NetDevice>) const’:
../src/nix-vector-routing/model/nix-vector-routing.cc:277:34: error: ‘path’ was not declared in this scope
  277 |           for (size_t i = 1; i < path.size(); i++)
      |                                  ^~~~

../contrib/leo/examples/leo-lab6.cc: In function ‘void SendPacket(int, int)’:
../contrib/leo/examples/leo-lab6.cc:65:15: warning: comparison of integer expressions of different signedness: ‘int’ and ‘uint32_t’ {aka ‘unsigned int’} [-Wsign-compare]
   65 |     if (srcId < satellites.GetN()) {
      |         ~~~~~~^~~~~~~~~~~~~~~~~~~
../contrib/leo/examples/leo-lab6.cc:71:15: warning: comparison of integer expressions of different signedness: ‘int’ and ‘uint32_t’ {aka ‘unsigned int’} [-Wsign-compare]
   71 |     if (dstId < satellites.GetN()) {
      |         ~~~~~~^~~~~~~~~~~~~~~~~~~
../contrib/leo/examples/leo-lab6.cc: In function ‘int main(int, char**)’:
../contrib/leo/examples/leo-lab6.cc:222:32: error: ‘sinkApps’ was not declared in this scope
  222 |         for (size_t i = 0; i < sinkApps.size() && i < sdPairs.size(); i++) {
      |                                ^~~~~~~~

Waf: Leaving directory `/home/lin/Downloads/ns-allinone-3.35/ns-3.35/build'
Build failed
 -> task in 'ns3-nix-vector-routing' failed with exit status 1 (run with -v to display more information)
 -> task in 'leo-lab6' failed with exit status 1 (run with -v to display more information)
